<resources>
    <string name="app_name">Clothes Share</string>
    <string name="home_button_description">Home</string>
    <string name="messages_button_description">Messages</string>
    <string name="profile_button_description">Profile</string>
    <string name="upload_button_description">Upload</string>
    <string name="username">Username\n</string>
    <string name="item_description">Item Description\n</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="post_description_hint">Enter description for your post.</string>
    <string name="post_description_label">Description</string>
    <string name="upload_post_label">Upload Post</string>
    <string name="post_story_hint">Enter story for your post.\n</string>
    <string name="post_story_label">Story</string>
    <string name="upload">Upload</string>
    <string name="messages_label">Messages</string>
    <string name="recent_message_label">This displays the most recent message sent.</string>
</resources>